deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easytrading
  labels:
    name: easytrading
